# cln-nostr-wallet-connect

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: lint.yml  test.yml
src/: cln_nwc.rs  cln_zapper.rs  limits.rs  main.rs  utils.rs
