[package]
name = "cln-nostr-wallet-connect"
version = "0.1.4-ALPHA"
edition = "2021"
authors = ["thesimplekid"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/thesimplekid/cln-nostr-wallet-connect"
description = "Core Lightning plugin for paying invoices with nostr connect (NIP47) **ALPHA**"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
log = "0.4"
cln-plugin = "0.1.9"
cln-rpc = "0.1.9"
futures = "0.3.26"
serde = "1"
serde_json = "1"
tokio = { version = "1", features = [ "full" ] }
nostr-sdk = { version = "0.32", default_features = false, features = [ "nip47" ] }
tungstenite = { version = "0.23", features = ["rustls-tls-webpki-roots"]}
dirs = "5.0.1"
hex = "0.4.3"
lightning-invoice = "0.31.0"
